<resources>
    <string name="app_name">mytestapp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="name">Paiboonkiat_kiewneth</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="encrypt_txt">Encrypt</string>
    <string name="output_string">Output</string>
    <string name="input_string" />
    <string name="hint_string">Input</string>
    <string name="decrypt_string">Decrypt</string>
    <string name="history_string">History</string>
    <string name="about_string">About this app</string>
    <string name="Md5_txthint">Input</string>
    <string name="md5hash_string">Hash</string>
    <string name="md5output_string">Output</string>
    <string name="play1_string">Base64</string>
    <string name="play2_string">Binary</string>
    <string name="share_string">Share</string>
    <string name="myname_string">Created by: Paiboonkiat Kiewneth</string>
</resources>
