<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".P3Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/biinput_txt"
            android:layout_width="270dp"
            android:layout_height="57dp"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:hint="@string/Md5_txthint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/biencrypt_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:text="@string/encrypt_txt"
            app:layout_constraintEnd_toStartOf="@+id/bidecrypt_btn"
            app:layout_constraintHorizontal_bias="0.391"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/biinput_txt" />

        <Button
            android:id="@+id/bidecrypt_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="56dp"
            android:text="@string/decrypt_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/biinput_txt" />

        <TextView
            android:id="@+id/bioutput_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="164dp"
            android:text="@string/md5output_string"
            android:textSize="@dimen/bioutput_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/biinput_txt" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>